--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -32,3 +32,32 @@ tzdata==2022.1
 urllib3==1.26.12
 virtualenv==20.15.1
 yarg==0.1.9
+asgiref==3.5.2
+azure-common==1.1.28
+azure-core==1.26.2
+azure-storage-blob==2.1.0
+azure-storage-common==2.1.0
+certifi==2022.12.7
+cffi==1.15.1
+charset-normalizer==3.0.1
+cryptography==39.0.0
+Django==4.1.4
+django-cors-headers==3.13.0
+djangorestframework==3.14.0
+idna==3.4
+isodate==0.6.1
+msrest==0.7.1
+mssql-django==1.2
+oauthlib==3.2.2
+pycparser==2.21
+PyJWT==2.6.0
+pyodbc==4.0.35
+python-dateutil==2.8.2
+pytz==2022.6
+requests==2.28.2
+requests-oauthlib==1.3.1
+six==1.16.0
+sqlparse==0.4.3
+typing_extensions==4.4.0
+tzdata==2022.7
+urllib3==1.26.14
